//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table KYCDetail {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [unique, not null]
  kycStatus KycStatus [not null, default: 'NOT_INITIALIZED']
  failedRemarks String
  userMetadata String [not null]
  whitelabelId String [not null]
  kycApplicantId String [unique]
  kycStage KYCStage [not null, default: 'NOT_INITIALIZED']
}

Table SyncDetails {
  id String [pk]
  lastSyncedAt DateTime [not null]
  actionName String [unique, not null]
  metadata String
}

Table UserBTCAddress {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  address String [unique, not null]
  userId String [not null]
  whitelabelId String [not null]
  txns BTCIncomingTransaction [not null]
}

Table BTCSettlementTransaction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  incomingTxnId String [unique, not null]
  incomingTxn BTCIncomingTransaction [not null]
  orderId String [unique]
  orderplaceTime DateTime
  amountReceivedInUSD String
  status BTCTxnProcessStatus [not null, default: 'NOT_INITIALIZED']
  failedRemarks String
}

Table BTCIncomingTransaction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  txnHash String [unique, not null]
  binanceTxnId String [unique, not null]
  txnTime DateTime [not null]
  amount String [not null]
  senderAddress String [not null]
  settlementTxn BTCSettlementTransaction
  user UserBTCAddress [not null]
  txnStatus TxnStatus [not null]
  failedRemarks String
}

Table KYCUser {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [unique, not null]
  whitelabelId String [not null]
  kycApplicantId String [unique]
  kycStatus KycStatus [not null, default: 'NOT_INITIALIZED']
  inspectionId String [unique]
  kycData String
  metadata String
}

Table WhitelabelIncomingTransaction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [not null]
  whitelabelId String [not null]
  provisionTxnHash String [unique, not null]
  settlementTransactionId String [unique]
  settlementTransaction BinanceIncomingTxn
}

Table BinanceIncomingTxn {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  paidCurrency String [not null]
  amountInPaidCurrency String [not null]
  network String [not null]
  txnHash String [unique, not null]
  senderAddress String [not null]
  binanceTxnId String [unique, not null]
  status IncomingTxnStatus [default: 'PAYMENT_RECEIVED']
  settlementTransactionId String [unique]
  settlementTransaction SettlementTransaction
  whitelabelIncomingTransaction WhitelabelIncomingTransaction
  failedRemarks String
}

Table SettlementTransaction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  orderId String [unique]
  orderplaceTime DateTime
  amountReceived String
  status SettlementTransactionProcessStatus [not null, default: 'NOT_INITIALIZED']
  incomingTxn BinanceIncomingTxn
}

Enum SettlementTransactionProcessStatus {
  NOT_INITIALIZED
  PENDING
  SUCCESS
  FAILED
}

Enum IncomingTxnStatus {
  PAYMENT_RECEIVED
  SETTLEMENT_INITIALZED
  COMPLETED
  FAILED
}

Enum SolIncomingTxnStatus {
  NOT_INITIALIZED
  RECEIVED
  CONVERSION_PROCESSING
  FAILED
  SUCCESS
}

Enum Network {
  BTC
  SOL
  BSC
  ETH
  TRC
  POL
}

Enum TxnStatus {
  PENDING
  SUCCESS
  ERROR
}

Enum BTCTxnProcessStatus {
  NOT_INITIALIZED
  PENDING
  SUCCESS
  FAILED
}

Enum KycStatus {
  NOT_INITIALIZED
  PENDING
  FAILED
  RETRY
  SUCCESS
}

Enum KYCStage {
  NOT_INITIALIZED
  ID_CREATED
  PASSPORT_UPLOADED
  SELFIE_UPLOADED
  REQUEST_CHECKED
}

Ref: BTCSettlementTransaction.incomingTxnId - BTCIncomingTransaction.id

Ref: BTCIncomingTransaction.senderAddress > UserBTCAddress.address

Ref: WhitelabelIncomingTransaction.settlementTransactionId - BinanceIncomingTxn.id

Ref: BinanceIncomingTxn.settlementTransactionId - SettlementTransaction.id